src/objects/QPMS__Calibration__c.object
<CustomObject>
    <description>Allow users to create a new Calibration request to manage the calibration of an asset.</description>
    <fields>
        <fullName>QPMS__Actual_Humidity__c</fullName>
        <description>Actual Humidity</description>
        <inlineHelpText>Actual Humidity</inlineHelpText>
        <label>Actual Humidity</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Actual_Temperature__c</fullName>
        <description>Actual Temperature</description>
        <inlineHelpText>Actual Temperature</inlineHelpText>
        <label>Actual Temperature</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>IF( ISBLANK( QPMS__Closed_Date__c ) , TODAY()  -  DATEVALUE(CreatedDate), QPMS__Closed_Date__c  -  DATEVALUE(CreatedDate))</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change Due Date</fullName>
                </value>
                <value>
                    <fullName>Calibration Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>store the approval group value</description>
        <inlineHelpText>store the approval group value</inlineHelpText>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Approval Required</description>
        <inlineHelpText>Approval Required</inlineHelpText>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 1</description>
        <inlineHelpText>Approver 1</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverCalibrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 2</description>
        <inlineHelpText>Approver 2</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverCalibrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver 3</description>
        <inlineHelpText>Approver 3</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverCalibrations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approver</description>
        <inlineHelpText>Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverCalibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp; QPMS__Asset_Profile__c, LEFT(QPMS__Asset_Profile__r.Name, 30) , &apos;_blank&apos; )</formula>
        <label>Asset Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Profile Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calibrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Asset_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Profile object</description>
        <inlineHelpText>Asset Profile object</inlineHelpText>
        <label>Asset Name</label>
        <referenceTo>QPMS__Asset_Profile__c</referenceTo>
        <relationshipLabel>Calibrations</relationshipLabel>
        <relationshipName>Calibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity_Names__c</fullName>
        <description>Calibration Authorized Entity / group Names</description>
        <inlineHelpText>Calibration Authorized Entity / group Names</inlineHelpText>
        <label>Authorized Entity Names</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity__c</fullName>
        <description>Calibration Authorized Entity users</description>
        <inlineHelpText>Calibration Authorized Entity users</inlineHelpText>
        <label>Authorized Entity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Bypass_Initiation_and_Resolution_step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass Initiation and Resolution step</description>
        <inlineHelpText>Bypass Initiation and Resolution step</inlineHelpText>
        <label>Bypass Initiation and Resolution step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Standard_Title__c</fullName>
        <formula>QPMS__CSMS_Standard__r.QPMS__Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSMS Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CSMS_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSMS Standard</description>
        <inlineHelpText>CSMS Standard</inlineHelpText>
        <label>CSMS Standard</label>
        <referenceTo>QPMS__CSMS_Standard__c</referenceTo>
        <relationshipLabel>Calibrations</relationshipLabel>
        <relationshipName>Calibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration_Name__c</fullName>
        <description>Standard Listview Fix</description>
        <formula>HYPERLINK(&quot;/apex/Calibration?Id=&quot; &amp; Id, Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calibration Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Calibration_Result__c</fullName>
        <label>Calibration Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>ChangeFieldApprovalStatus</description>
        <inlineHelpText>ChangeFieldApprovalStatus</inlineHelpText>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>Used for calculating age of the calibration</description>
        <inlineHelpText>Used for calculating age of the calibration</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>CurrentApprovalSequenceNumber</description>
        <inlineHelpText>CurrentApprovalSequenceNumber</inlineHelpText>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>Due date of calibration.</description>
        <inlineHelpText>Due date of calibration.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Calibration security value</description>
        <inlineHelpText>Calibration security value</inlineHelpText>
        <label>Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Exported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is used to store the calibration variables exported user name in calibration object</description>
        <inlineHelpText>This is used to store the calibration variables exported user name in calibration object</inlineHelpText>
        <label>Exported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calibrations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exported</description>
        <inlineHelpText>Exported</inlineHelpText>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Imported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Imported By</description>
        <inlineHelpText>Imported By</inlineHelpText>
        <label>Imported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calibrations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial Submitter</description>
        <inlineHelpText>Initial Submitter</inlineHelpText>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calibrations_Initial_Submitters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Stores the logged in user site publc group and inherited from Asset Profile</description>
        <inlineHelpText>Stores the logged in user site publc group and inherited from Asset Profile</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Instruction__c</fullName>
        <description>Instruction</description>
        <inlineHelpText>Instruction</inlineHelpText>
        <label>Instruction</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Is_Schedule_Type_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holds the value of Schedule type field is disabled or not</description>
        <inlineHelpText>Holds the value of Schedule type field is disabled or not</inlineHelpText>
        <label>Is Schedule Type Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Measurement_Count__c</fullName>
        <description>Measurement Count</description>
        <inlineHelpText>Measurement Count</inlineHelpText>
        <label>Measurement Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>New Due Date</description>
        <inlineHelpText>New Due Date</inlineHelpText>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Owner</description>
        <inlineHelpText>New Owner</inlineHelpText>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NewOwnerCalibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner DueDate</description>
        <inlineHelpText>Note To Approver Owner DueDate</inlineHelpText>
        <label>Note To Approver Owner/DueDate</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>Note To Approver</description>
        <inlineHelpText>Note To Approver</inlineHelpText>
        <label>Note To Approver</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; +Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Performed_By_Name__c</fullName>
        <formula>QPMS__Performed_By__r.FirstName + &apos; &apos; + QPMS__Performed_By__r.LastName</formula>
        <label>Performed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Performed By is a user who performed the calibration.it is an optional field.</description>
        <label>Performed By</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Calibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Physical_Location__c</fullName>
        <label>Physical Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <label>Purpose</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <description>Capture the reason of calibration void</description>
        <inlineHelpText>Capture the reason of calibration void</inlineHelpText>
        <label>Reason For Void</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Required_Humidity__c</fullName>
        <description>Required Humidity</description>
        <inlineHelpText>Required Humidity</inlineHelpText>
        <label>Required Humidity</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Required_Temperature__c</fullName>
        <description>Required Temperature</description>
        <inlineHelpText>Required Temperature</inlineHelpText>
        <label>Required Temperature</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Code__c</fullName>
        <description>Resolution Code</description>
        <inlineHelpText>Resolution Code</inlineHelpText>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Calibration</fullName>
                    <default>true</default>
                    <label>Calibration</label>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Comment__c</fullName>
        <description>Resolution Comment</description>
        <inlineHelpText>Resolution Comment</inlineHelpText>
        <label>Resolution Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Schedule_Assigned_User_Name__c</fullName>
        <formula>QPMS__Schedule_Assigned_User__r.FirstName +&apos; &apos;+ QPMS__Schedule_Assigned_User__r.LastName</formula>
        <label>Schedule Assigned User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Schedule_Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capturing Scheduled Assigned owner for populating default owner as Calibrate task owner</description>
        <inlineHelpText>Capturing Scheduled Assigned owner for populating default owner as Calibrate task owner</inlineHelpText>
        <label>Schedule Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Calibrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Schedule_Type__c</fullName>
        <description>Schedule type</description>
        <inlineHelpText>Schedule type</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Frequency</fullName>
                </value>
                <value>
                    <fullName>Usage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>QPMS__Schedule__c</referenceTo>
        <relationshipLabel>Calibrations</relationshipLabel>
        <relationshipName>Calibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence_Position__c</fullName>
        <description>Sequence Position</description>
        <inlineHelpText>Sequence Position</inlineHelpText>
        <label>Sequence Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>Sequence</description>
        <inlineHelpText>Sequence</inlineHelpText>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>Status of a record</description>
        <inlineHelpText>Status of a record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__VendorName__c</fullName>
        <formula>QPMS__Vendor_Details__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Vendor_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Details of a vendor.</description>
        <inlineHelpText>Details of a vendor.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>Calibrations</relationshipLabel>
        <relationshipName>Calibrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Vendor_Title__c</fullName>
        <formula>QPMS__Vendor_Details__r.QPMS__Supplier_Name__c</formula>
        <label>Vendor Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity_Names__c</fullName>
        <description>Calibration View Only Entity / Group Names</description>
        <label>View Only Entity Names</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__View_Only_Entity__c</fullName>
        <description>Calibration View Only Entity users</description>
        <inlineHelpText>Calibration View Only Entity users</inlineHelpText>
        <label>View Only Entity</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Calibration</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>QPMS__Calibration_Name__c</columns>
        <columns>QPMS__Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Calibration Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calibrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>